<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualReportActivity" >
    
    <ScrollView
 		android:layout_width="match_parent"
  		android:layout_height="match_parent" >
    <LinearLayout
    android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
		<!-- App name -->
        <TextView
            android:id="@+id/app_name_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_app_name_label" />
        <EditText
            android:id="@+id/app_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manual_app_name_hint" />
    
    	<!-- Description -->
        <TextView
            android:id="@+id/description_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_description_label" />
        <EditText
            android:id="@+id/description_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manual_description_hint"
            android:minLines="5" />

        <!-- Attachments -->
        <TextView
            android:id="@+id/attachment_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_attachment_label" />
        <CheckBox
            android:id="@+id/ap_online_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/manual_with_ap_online_log" />
        <!--CheckBox
            android:id="@+id/ap_offline_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_with_ap_offline_log" /-->
        <CheckBox
            android:id="@+id/radio_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/manual_with_radio_log" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_line" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_line" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_line" />

    </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <!-- Submit button -->
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_submit_now" />
    </LinearLayout>

</RelativeLayout>